Fixed problem with size on mobile

--- a/css/sidebar.css
+++ b/css/sidebar.css
@@ -21,9 +21,6 @@ body {
   font-size: 1.2rem;
 }
 
-#sidebar-wrapper .list-group {
-  width: 15rem;
-}
 
 #page-content-wrapper {
   min-width: 100vw;
